# PlayingCardsCore

./: .gitmodules  CMakeLists.txt  README.md
includes/: cards.h  progbar.h
resources/game/configs/: deck.json
src/: cards.cc  functional.cc
src/aux/: progbar.cc
unittest/: cardstest.cc
